--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,18 +1,5 @@
-@charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
-@import url(all.min.css);
-@import url(normalize.css);
-/*font*/
-body {
-  font-family: 'Noto Sans KR', sans-serif;
-}
+@import url(static.css);
 
-h1,
-h2,
-h3,
-.title {
-  font-family: 'Noto Sans KR', sans-serif;
-}
 /* Global */
 .section-content {
   padding: 4rem 0;
