--- a/src/main/resources/static/css/boardDetail.css
+++ b/src/main/resources/static/css/boardDetail.css
@@ -14,12 +14,11 @@ h3,
 }
 
 #top {
-
-    background-image: url('../img/food/kor/KakaoTalk_20221103_061409896_02.jpg');
+    background-image: url('../img/food/KakaoTalk_Photo_2022-12-23-15-44-41.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 20vh;
+    height: 30vh;
     position: relative;
     transition: 0.6s;
 }
