--- a/src/main/resources/static/css/loginForm.css
+++ b/src/main/resources/static/css/loginForm.css
@@ -16,14 +16,12 @@ h3,
 }
 
 #top {
-
-    background-image: url('../img/food/kor/KakaoTalk_20221103_061409896_02.jpg');
+    background-image: url('../img/food/gugong.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 20vh;
+    height: 40vh;
     position: relative;
-    transition: 0.6s;
 }
 
 #top .overlay {
