--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -67,44 +67,6 @@
   }
 }
 
-#intro .intro-first-card {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 12rem;
-}
-
-#intro .col-6:nth-of-type(1) .intro-first-card {
-  background-image: url('../img/food/kor/KakaoTalk_20221103_061409896_02.jpg');
-}
-
-#intro .col-6:nth-of-type(2) .intro-first-card {
-  background-image: url('../img/food/us/KakaoTalk_20221103_061413227_01.jpg');
-}
-
-#intro .col-6:nth-of-type(3) .intro-first-card {
-  background-image: url('../img/food/ch/KakaoTalk_20221103_061416584_04.jpg');
-}
-
-#intro .col-6:nth-of-type(4) .intro-first-card {
-  background-image: url('../img/food/jap/KakaoTalk_20221103_061420188_02.jpg');
-}
-
-
-#intro .intro-first-card .overlay {
-  left: 0;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-#intro .intro-first-card .overlay a {
-  transition: hover 0.4s ease;
-}
-
-#intro .intro-first-card .overlay a:hover {
-  color: #fafa6f;
-}
-
 #services {
   background-color: rgba(96, 125, 139, 0.1);
 }
@@ -136,6 +98,9 @@
 #services .card .overlay:hover {
   opacity: 1;
   color: #fff;
+}
+#image {
+  object-fit: fill;
 }
 
 
