--- a/src/main/resources/static/css/boardDetail.css
+++ b/src/main/resources/static/css/boardDetail.css
@@ -47,13 +47,6 @@ h3,
     }
 }
 
-#top .divider {
-    width: 10%;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    border-top: 2px solid #fff;
-}
-
 #top .welcome {
     padding-right: 8rem;
     color: #fff;
@@ -105,4 +98,9 @@ h3,
     .containerCustom {
         width: 940px;
     }
+}
+.divider {
+    width: 10%;
+    margin: 2rem auto;
+    border-top: 0.5rem solid rgb(248, 226, 59);
 }
