--- a/src/main/resources/static/css/boardList.css
+++ b/src/main/resources/static/css/boardList.css
@@ -63,13 +63,6 @@ h3,
   }
 }
 
-#top .divider {
-  width: 10%;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  border-top: 2px solid #fff;
-}
-
 #top .welcome {
   padding-right: 8rem;
   color: #fff;
@@ -138,7 +131,7 @@ a {
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
-  text-align: var(--bs-body-text-align);
+  /*text-align: var(--bs-body-text-align);*/
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(67,89,113,0);
   text-rendering: optimizeLegibility;
@@ -154,4 +147,46 @@ a {
   flex: 1 0 0%;
   float: none;
   margin: 0 auto
+}
+.btn {
+  height: 2.4rem;
+  font-size: 1rem;
+}
+#content {
+  width: 20rem;
+}
+#image {
+  width: 25vw;
+  height: 20vw;
+  object-fit: fill;
+}
+.card {
+  border: 0px;
+}
+.filter {
+  width: 95vw;
+}
+@media (max-width: 768px) {
+  #image {
+    width: 100vw;
+    height: 90vw;
+    object-fit: fill;
+  }
+}
+@media (min-width: 768px) {
+  .filter {
+    width: 750px;
+  }
+}
+
+@media (min-width: 992px) {
+  .filter {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .filter {
+    width: 50vw;
+  }
 }
