--- a/src/main/resources/static/css/loginForm.css
+++ b/src/main/resources/static/css/loginForm.css
@@ -48,11 +48,10 @@ h3,
     }
 }
 
-#top .divider {
-    width: 10%;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    border-top: 2px solid #fff;
+.divider {
+    width: 20%;
+    margin: 10px 1rem 7rem;
+    border-top: 0.5rem solid rgb(176, 255, 189);
 }
 
 #top .welcome {
@@ -73,4 +72,6 @@ h3,
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 330px;
+    height: 65px;
 }
