feat "button hover 제거"

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -156,7 +156,7 @@
 }
 
 #gallery .gallery-item:nth-of-type(5) .card {
-  background-image: url('../img/regions/전라북도.jpg');
+  background-image: url('../img/regions/bibimbab.jpeg');
 }
 
 #gallery .gallery-item:nth-of-type(6) .card {
