fix "버튼 hover 수정"

--- a/src/main/resources/static/css/boardList.css
+++ b/src/main/resources/static/css/boardList.css
@@ -38,8 +38,8 @@ h3,
   position: relative;
   height: 35vh;
 }
-.btn:hover {
-  background: none; !important;
+.btn-outline-danger:hover {
+  background: transparent; !important;
 }
 
 #top .overlay {
